# rohan12factor

./: Makefile  README.md  install-extensions.ps1  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
rohan12factor/: __init__.py  dataset.py  features.py  plots.py
rohan12factor/modeling/: predict.py  train.py
