[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rohan12factor"
version = "0.0.1"
description = "simple session of cookiecutter"
authors = [
  { name = "Rohan Fusemachine" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["rohan12factor"]
include = ["pyproject.toml", "rohan12factor/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["rohan12factor"]
force-sort-within-sections = true

